--- a/index.html
+++ b/index.html
@@ -104,7 +104,253 @@
   </div>
 
   <script>
-    // We'll add JavaScript here next
+document.getElementById('analyze').addEventListener('click', analyzeProfile);
+
+async function analyzeProfile() {
+  const username = document.getElementById('username').value.trim();
+  if (!username) return;
+
+  const loadingEl = document.getElementById('loading');
+  const errorEl = document.getElementById('error');
+  const resultsEl = document.getElementById('results');
+
+  // Reset UI
+  errorEl.textContent = '';
+  resultsEl.style.display = 'none';
+  loadingEl.style.display = 'block';
+
+  try {
+    // 1. Fetch basic user info
+    const userRes = await fetch(`https://api.github.com/users/${username}`);
+    if (!userRes.ok) throw new Error('User not found');
+    const user = await userRes.json();
+
+    // 2. Fetch contribution data via GraphQL
+    const query = `
+      query($username: String!) {
+        user(login: $username) {
+          contributionsCollection {
+            contributionCalendar {
+              totalContributions
+              weeks {
+                contributionDays {
+                  date
+                  contributionCount
+                }
+              }
+            }
+          }
+          repositories(first: 100, orderBy: {field: UPDATED_AT, direction: DESC}) {
+            nodes {
+              languages(first: 3, orderBy: {field: SIZE, direction: DESC}) {
+                edges {
+                  size
+                  node {
+                    name
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    `;
+
+    const graphqlRes = await fetch('https://api.github.com/graphql', {
+      method: 'POST',
+      headers: {
+        'Content-Type': 'application/json',
+        // No Authorization header = unauthenticated (60 req/hr)
+      },
+      body: JSON.stringify({
+        query,
+        variables: { username }
+      })
+    });
+
+    const graphqlData = await graphqlRes.json();
+    if (graphqlData.errors) {
+      throw new Error(graphqlData.errors[0].message || 'Failed to load contribution data');
+    }
+
+    const contributions = graphqlData.data.user.contributionsCollection.contributionCalendar;
+    const repos = graphqlData.data.user.repositories.nodes;
+
+    // Parse contribution days
+    const contributionDays = [];
+    contributions.weeks.forEach(week => {
+      week.contributionDays.forEach(day => {
+        contributionDays.push({
+          date: new Date(day.date),
+          count: day.contributionCount
+        });
+      });
+    });
+
+    // Sort by date
+    contributionDays.sort((a, b) => a.date - b.date);
+
+    // Calculate streaks
+    const streaks = calculateStreaks(contributionDays);
+    const totalContributions = contributions.totalContributions;
+
+    // Get top languages
+    const languageMap = new Map();
+    repos.forEach(repo => {
+      repo.languages.edges.forEach(edge => {
+        const lang = edge.node.name;
+        const size = edge.size;
+        languageMap.set(lang, (languageMap.get(lang) || 0) + size);
+      });
+    });
+
+    const topLanguages = [...languageMap.entries()]
+      .sort((a, b) => b[1] - a[1])
+      .slice(0, 3)
+      .map(([lang]) => lang);
+
+    // Generate suggestions
+    const suggestions = generateSuggestions(contributionDays, streaks, topLanguages);
+
+    // Render results
+    document.getElementById('user-title').textContent = `@${user.login}`;
+    document.getElementById('stats').innerHTML = `
+      <div class="stat-card"><strong>Total contributions (last year):</strong> ${totalContributions}</div>
+      <div class="stat-card"><strong>Current streak:</strong> ${streaks.current} days</div>
+      <div class="stat-card"><strong>Longest streak:</strong> ${streaks.longest} days</div>
+      ${topLanguages.length ? `<div class="stat-card"><strong>Top languages:</strong> ${topLanguages.join(', ')}</div>` : ''}
+    `;
+
+    document.getElementById('suggestions').innerHTML = suggestions.map(s => 
+      `<div class="suggestion">${s}</div>`
+    ).join('');
+
+    resultsEl.style.display = 'block';
+  } catch (err) {
+    errorEl.textContent = err.message || 'An error occurred. Try again later.';
+  } finally {
+    loadingEl.style.display = 'none';
+  }
+}
+
+function calculateStreaks(days) {
+  if (days.length === 0) return { current: 0, longest: 0 };
+
+  let currentStreak = 0;
+  let longestStreak = 0;
+  const today = new Date();
+  today.setHours(0, 0, 0, 0);
+
+  // Start from the most recent day
+  let prevDate = null;
+  for (let i = days.length - 1; i >= 0; i--) {
+    const day = days[i];
+    if (day.count === 0) continue;
+
+    const date = new Date(day.date);
+    date.setHours(0, 0, 0, 0);
+
+    // Check if it's today or yesterday (for current streak)
+    if (!prevDate) {
+      const diffTime = Math.abs(today - date);
+      const diffDays = Math.ceil(diffTime / (1000 * 60 * 60 * 24));
+      if (diffDays <= 1) {
+        currentStreak = 1;
+      } else {
+        currentStreak = 0;
+      }
+    } else {
+      const diffTime = prevDate - date;
+      const diffDays = diffTime / (1000 * 60 * 60 * 24);
+      if (diffDays === 1) {
+        currentStreak++;
+      } else if (diffDays > 1) {
+        break; // streak broken
+      }
+    }
+    prevDate = date;
+  }
+
+  // For longest streak (simplified: just count consecutive days with >0 contributions)
+  let tempStreak = 0;
+  prevDate = null;
+  for (const day of days) {
+    if (day.count === 0) {
+      longestStreak = Math.max(longestStreak, tempStreak);
+      tempStreak = 0;
+      continue;
+    }
+    const date = new Date(day.date);
+    date.setHours(0, 0, 0, 0);
+    if (prevDate && (date - prevDate) / (1000 * 60 * 60 * 24) === 1) {
+      tempStreak++;
+    } else {
+      tempStreak = 1;
+    }
+    prevDate = date;
+  }
+  longestStreak = Math.max(longestStreak, tempStreak);
+
+  return { current: currentStreak, longest: longestStreak };
+}
+
+function generateSuggestions(days, streaks, topLanguages) {
+  const suggestions = [];
+
+  // Days since last contribution
+  const lastContributionDay = days.filter(d => d.count > 0).pop();
+  if (lastContributionDay) {
+    const today = new Date();
+    today.setHours(0, 0, 0, 0);
+    const lastDate = new Date(lastContributionDay.date);
+    lastDate.setHours(0, 0, 0, 0);
+    const diffTime = today - lastDate;
+    const diffDays = Math.floor(diffTime / (1000 * 60 * 60 * 24));
+
+    if (diffDays > 3) {
+      suggestions.push(`You haven’t contributed in <strong>${diffDays} days</strong>—time for a quick commit? 🔄`);
+    }
+  }
+
+  // Streak encouragement
+  if (streaks.current > 0 && streaks.current >= streaks.longest * 0.8) {
+    suggestions.push(`🔥 Your current streak (${streaks.current} days) is close to your record (${streaks.longest})—keep it up!`);
+  }
+
+  // Most active day of week
+  const dayCounts = [0, 0, 0, 0, 0, 0, 0]; // Sun to Sat
+  days.filter(d => d.count > 0).forEach(d => {
+    const dayOfWeek = d.date.getDay();
+    dayCounts[dayOfWeek] += d.count;
+  });
+  const mostActiveDayIndex = dayCounts.indexOf(Math.max(...dayCounts));
+  const daysOfWeek = ['Sunday', 'Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday'];
+  const mostActiveDay = daysOfWeek[mostActiveDayIndex];
+  if (dayCounts[mostActiveDayIndex] > 0) {
+    suggestions.push(`You’re most active on <strong>${mostActiveDay}</strong>—great for planning coding sessions! 📅`);
+  }
+
+  // Language suggestion
+  if (topLanguages.length > 0) {
+    const mainLang = topLanguages[0];
+    const langSuggestions = {
+      'JavaScript': 'TypeScript (adds type safety!)',
+      'Python': 'FastAPI or Pydantic for modern projects',
+      'Java': 'Kotlin for more concise code',
+      'C++': 'Rust for memory safety',
+      'PHP': 'Laravel or Symfony for structured apps'
+    };
+    if (langSuggestions[mainLang]) {
+      suggestions.push(`You mostly code in <strong>${mainLang}</strong>—have you tried <strong>${langSuggestions[mainLang]}</strong>? 💡`);
+    }
+  }
+
+  if (suggestions.length === 0) {
+    suggestions.push('Great job staying active! Keep coding! 🎉');
+  }
+
+  return suggestions;
+}
   </script>
 </body>
 </html>
